edit google tag

--- a/index.html
+++ b/index.html
@@ -10,7 +10,37 @@
 			href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900@family=Arapey:ital@0;1&family=Domine:wght@400..700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Anek+Latin:wght@100..800&family=Rokkitt:ital,wght@0,100..900;1,100..900&display=swap"
 			rel="stylesheet"
 		/>
-		<title>K2 Web</title>
+		<title>K2 Venture Creative Communication Agency</title>
+		<meta
+			name="description"
+			content="K2 Venture Creative Communication Agency"
+		/>
+		<meta property="og:locale" content="en_US" />
+		<meta property="og:type" content="website" />
+		<meta
+			property="og:title"
+			content="K2 Venture Creative Communication Agency in Bangkok, Thailand"
+		/>
+		<meta
+			property="og:description"
+			content="K2 Venture Creative Communication Agency based in Bangkok"
+		/>
+		<meta property="og:url" content="https://www.k2-venture.com/" />
+		<meta property="og:site_name" content="K2 Venture" />
+		<!-- Google tag (gtag.js) -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=G-KPWMF1TGL0"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
+
+			gtag("config", "G-KPWMF1TGL0");
+		</script>
 	</head>
 	<body>
 		<div id="root"></div>
